# document-summariser

./: .env.example  .gitignore  Agents.md  CLAUDE.md  PROMPT_SET_USER_GUIDE.txt  README.md  pyproject.toml  summarise_pdf.py
.codex/: project-memory.md
config/: config.yaml  master_config.yaml
prompts/: consolidate.prompt.txt  correction.prompt.txt  summarise.prompt.txt
prompts/sets/default/: consolidate.prompt.txt
prompts/sets/extended/: consolidate.prompt.txt  summarise.prompt.txt
prompts/sets/short/: consolidate.prompt.txt  summarise.prompt.txt
src/document_summariser/: application.py  artifacts.py  cli.py  config.py  env.py  errors.py  ocr.py  prompts.py  rendering.py
src/document_summariser/defaults/: config.yaml
src/document_summariser/defaults/prompts/sets/default/: consolidate.prompt.txt
src/document_summariser/defaults/templates/: output_format.yaml
src/document_summariser/providers/: base.py  registry.py
src/document_summariser/stages/: __init__.py  context.py  pipeline.py
tests/: test_application.py  test_cli.py  test_config.py  test_env.py  test_errors.py  test_ocr.py  test_pipeline.py  test_prompts.py  test_providers.py  test_simple_runner.py
