[project]
name = "document-summariser"
version = "0.1.0"
description = "CLI pipeline for OCR, correction, multi-provider summarisation, consolidation, and Urdu DOCX rendering."
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
  "google-cloud-vision>=3.8.0",
  "google-genai>=1.0.0",
  "openai>=1.55.0",
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.2",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
summarise = "document_summariser.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
